# shellbenchmarks

./: .gitignore  BuildModels.h  CMakeLists.txt  ElasticShell.cpp  ElasticShell.h  GeometryDerivatives.cpp  GeometryDerivatives.h  GeometryTools.cpp  GeometryTools.h  MeshConnectivity.cpp  MeshConnectivity.h  ParseWimFiles.cpp  ParseWimFiles.h  SimulationState.h  StaticSolve.cpp  StaticSolve.h  TestModels.cpp  TestModels.h  main.cpp  mesh_generation.py
MeshEditor/: load_uv_parametrization.py  mesh_bilayer2monolayer.py  mesh_bilayerOp.py  mesh_retriangulation.py  tempCodeRunnerFile.py
SecondFundamentalForm/: MidedgeAverageFormulation.cpp
SensitiveAnalysis/: SensitiveAnalysis.cpp  SensitiveAnalysis.h  SensitiveAnalysisABbarPos.cpp  SensitiveAnalysisABbarPos.h  SensitiveAnalysisAbarBbar.cpp  SensitiveAnalysisAbarBbar.h  SensitiveAnalysisAbarPos.cpp  SensitiveAnalysisAbarPos.h
SimulationSetup/: IfoptSoler.cpp  IfoptSolver.h  LBFGSBSolver.h  LBFGSSolver.h  LineSearch.h  SimulationSetup.cpp  SimulationSetup.h  SimulationSetupAlglibSolver.cpp  SimulationSetupAlglibSolver.h  SimulationSetupDynamicSolver.cpp  SimulationSetupDynamicSolver.h  SimulationSetupFindAbar.cpp  SimulationSetupFindAbar.h  SimulationSetupIfoptSoler.cpp  SimulationSetupIfoptSolver.h  SimulationSetupIpoptSolver.cpp  SimulationSetupIpoptSolver.h  SimulationSetupNormal.cpp  SimulationSetupNormal.h  convertedopt.cpp  convertedopt.h
benchmarks/: mesh_generation.py
build_XCode/: CMakeCache.txt  cmake_install.cmake  libigl-export.cmake
build_XCode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
build_XCode/RelWithDebInfo/: shellbenchmark_bin
build_XCode/Release/: shellbenchmark_bin
build_XCode/alglib/: cmake_install.cmake
cmake/: FindMOSEK.cmake  FindSuiteSparse.cmake  FindUmfpack.cmake
cppoptlib/: meta.h  problem.h
debug_help/: testboundary.m
(+168 files in other folders)
